fix(css/header): font too large in main header nav

--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -46,7 +46,6 @@ header
 
   nav
     margin-top: 5px
-    font-size: $fs-big
     form
       display: inline-block
     .group
